# void-ffmpeg

./: .gitignore  CMakeLists.txt  README.md  active_em.ps1  package-lock.json  package.json  types.d.ts  void.json
ffmpeg/: config.h
ffmpeg/libavcodec/: hwconfig.h  nvdec.h  nvenc.h
ffmpeg/libavformat/: avformat.h  oggdec.h  options_table.h  version_major.h
ffmpeg/libavutil/: ffversion.h
src/: plugin.cpp
test/: app.js  package-lock.json  package.json  void.config.json
